feat: improve snapshot recovery and task finalization metrics